[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/Achivements.gd" type="Script" id=1]
[ext_resource path="res://Font/Medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/Icon_Locked.png" type="Texture" id=3]
[ext_resource path="res://Font/Large.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=5]

[node name="Achivements" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer3" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
use_top_left = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer3"]
margin_left = -364.0
margin_top = -244.0
margin_right = 364.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer3/CenterContainer"]
margin_right = 728.0
margin_bottom = 488.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer3/CenterContainer/HBoxContainer"]
margin_right = 728.0
margin_bottom = 488.0

[node name="Label" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 728.0
margin_bottom = 112.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "achievements"
align = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 728.0
margin_bottom = 206.0
grow_vertical = 0

[node name="Escaped" type="HBoxContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 219.0
margin_right = 509.0
margin_bottom = 90.0
grow_horizontal = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer/Escaped"]
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer/Escaped"]
margin_left = 94.0
margin_top = 17.0
margin_right = 290.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Escaped"

[node name="Label2" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 210.0
margin_right = 728.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 5 )
text = "Complete the game"
align = 1
valign = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 728.0
margin_bottom = 300.0

[node name="Potato" type="HBoxContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 233.0
margin_right = 495.0
margin_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer3/Potato"]
margin_right = 90.0
margin_bottom = 90.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer3/Potato"]
margin_left = 94.0
margin_top = 17.0
margin_right = 262.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Potato"

[node name="Label3" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 304.0
margin_right = 728.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 5 )
text = "Find the hidden potato"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 728.0
margin_bottom = 394.0

[node name="You_missed" type="HBoxContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 185.0
margin_right = 542.0
margin_bottom = 90.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer2/You_missed"]
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer2/You_missed"]
margin_left = 94.0
margin_top = 17.0
margin_right = 357.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "You Missed"

[node name="Label4" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 398.0
margin_right = 728.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 5 )
text = "Click the achievement icon above this achievement"
align = 1
valign = 1

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 398.0
margin_right = 728.0
margin_bottom = 488.0

[node name="Firepower" type="HBoxContainer" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer4"]
margin_left = 191.0
margin_right = 537.0
margin_bottom = 90.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer4/Firepower"]
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer4/Firepower"]
margin_left = 94.0
margin_top = 17.0
margin_right = 346.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Firepower"
align = 1
valign = 1

[node name="Label5" type="Label" parent="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 492.0
margin_right = 728.0
margin_bottom = 508.0
custom_fonts/font = ExtResource( 5 )
text = "Unlock the Long Range Shockwave Projectile Launching Device"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_right = 177.0
margin_bottom = 74.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 22.0
margin_right = 200.0
margin_bottom = 78.0
alignment = 1

[node name="Button" type="LinkButton" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 175.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
text = "< Back"
underline = 2

[connection signal="mouse_entered" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer/Escaped" to="." method="_on_Escaped_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer/Escaped" to="." method="_on_Escaped_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer3/Potato" to="." method="_on_Potato_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer3/Potato" to="." method="_on_Potato_mouse_exited"]
[connection signal="pressed" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer3/Potato/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer2/You_missed" to="." method="_on_You_missed_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer2/You_missed" to="." method="_on_You_missed_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer4/Firepower" to="." method="_on_Firepower_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer3/CenterContainer/HBoxContainer/VBoxContainer/CenterContainer4/Firepower" to="." method="_on_Firepower_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer2/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer2/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
